# autogit

./: .gitignore  devenv.nix  flake.nix
devenv-modules/: autogit.nix
pkgs/autogit/: default.nix
scripts/autogit/: .gitignore  pyproject.toml
scripts/autogit/src/: autogit.py
